--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN
+  github-token: $TRAVIS_GITHUB_TOKEN
   keep-history: true
   local-dir: build/html
   on:
